fix z-index bug

--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -6,7 +6,6 @@
   border: none;
   padding: 10px 20px;
   font-size: 16px;
-  z-index: -1;
   cursor: pointer;
   transition: background-color, transform, 0.2s;
 }
