--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -40,6 +40,7 @@ nav h1 span {
   align-items: center;
   font-size: 1.2em;
 
+  z-index: 11;
   position: absolute;
   top: 80px;
   left: 50%;
@@ -68,6 +69,7 @@ nav h1 span {
 
 .overlay {
   position: absolute;
+  z-index: 10;
   top: 66px;
   bottom: 0;
   left: 0;
